Mejora de la web final de Recumbre hotel v16

--- a/index.html
+++ b/index.html
@@ -155,11 +155,13 @@
 
     <!--ESTRUCTURA N°3 = FOOTER-->
     <footer id="footer"> <!--PIÉ DE PÁGINA / LINKS REDES ETC-->
+        
         <section class="footer-logo">
             <picture class="footer-logo-picture">
                 <img src="icons/LOGO RECUMBRE HOTEL.png" alt="">
             </picture>
         </section>
+
         <section class="footer-links">
             <ul class="footer-links-ul">
                 <li>
@@ -181,10 +183,10 @@
         </section>
 
         <section class="footer-redes">
-            <a href="#" class="social-icon"><img src="icons/facebook-02_1.ico" alt="Facebook"></a>
-            <a href="#" class="social-icon"><img src="icons/instagram-03_1.ico" alt="Instagram"></a>
-            <a href="#" class="social-icon"><img src="icons/tiktok-04_1.ico" alt="TikTok"></a>
-            <a href="#" class="social-icon"><img src="icons/whatsapp-05_1.ico" alt="Whatsapp"></a>
+            <a href="https://www.facebook.com/recumbrehotel" class="footer-social-icon"><img src="icons/facebook-02_1.ico" alt="Facebook"></a>
+            <a href="https://www.instagram.com/recumbrehotel/" class="footer-social-icon"><img src="icons/instagram-03_1.ico" alt="Instagram"></a>
+            <a href="https://www.tiktok.com/@recumbrehotel" class="footer-social-icon"><img src="icons/tiktok-04_1.ico" alt="TikTok"></a>
+            <a href="https://bit.ly/Reser_" class="footer-social-icon"><img src="icons/whatsapp-05_1.ico" alt="Whatsapp"></a>
         </section>
 
         <article class="footer-autor">
