--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -171,10 +171,10 @@
         </section>
 
         <section class="footer-redes">
-            <a href="#" class="social-icon"><img src="../icons/facebook-02_1.ico" alt="Facebook"></a>
-            <a href="#" class="social-icon"><img src="../icons/instagram-03_1.ico" alt="Instagram"></a>
-            <a href="#" class="social-icon"><img src="../icons/tiktok-04_1.ico" alt="TikTok"></a>
-            <a href="#" class="social-icon"><img src="../icons/whatsapp-05_1.ico" alt="Whatsapp"></a>
+            <a href="https://www.facebook.com/recumbrehotel" class="footer-social-icon"><img src="../icons/facebook-02_1.ico" alt="Facebook"></a>
+            <a href="https://www.instagram.com/recumbrehotel/" class="footer-social-icon"><img src="../icons/instagram-03_1.ico" alt="Instagram"></a>
+            <a href="https://www.tiktok.com/@recumbrehotel" class="footer-social-icon"><img src="../icons/tiktok-04_1.ico" alt="TikTok"></a>
+            <a href="https://bit.ly/Reser_" class="footer-social-icon"><img src="../icons/whatsapp-05_1.ico" alt="Whatsapp"></a>
         </section>
 
         <article class="footer-autor">
