Mejora de la web final de Recumbre hotel v17

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                     alma andina de Ayacucho.<br>
 
                     <br>Hoy, Recumbre Hotel sigue siendo un puente entre el pasado y el presente, invitando a todos a
-                    descubrir Ayacucho desde su corazón.</p>
+                    descubrir Ayacucho desde su corazón.
+                </p>
             </article>
             <picture class="grid-picture-historia">
                 <img class="img-historia" src="./images/historia-decierto-hotel-3.png"
@@ -129,7 +130,7 @@
                     <img class="img-clientes" src="./images/foto-de-clientes.png" alt="Foto del cliente">
                 </picture>
                 <h1>Norma Guzman</h1>
-                <p>Nobis voluptatem magni doloribus voluptate culpa dolor est neque.</p>
+                <p>Recumbre Hotel hace que uno se sienta como en casa. ¡Excelente experiencia!</p>
             </acticle>
 
             <acticle class="grid-card-clientes">
@@ -137,7 +138,7 @@
                     <img class="img-clientes" src="./images/inicio-clientes-v1.png" alt="Foto del cliente">
                 </picture>
                 <h1>Paula Torres</h1>
-                <p>Nobis voluptatem magni doloribus voluptate culpa dolor est neque.</p>
+                <p>Las habitaciones son cómodas y muy limpias. ¡Perfecto para relajarse!</p>
             </acticle>
 
             <acticle class="grid-card-clientes">
@@ -145,7 +146,7 @@
                     <img class="img-clientes" src="./images/inicio-clientes-v2.png" alt="Foto del cliente">
                 </picture>
                 <h1>Rita Moreno</h1>
-                <p>Nobis voluptatem magni doloribus voluptate culpa dolor est neque.</p>
+                <p>El desayuno estuvo delicioso, con opciones locales. Muy recomendado.</p>
             </acticle>
 
         </section>
@@ -155,7 +156,7 @@
 
     <!--ESTRUCTURA N°3 = FOOTER-->
     <footer id="footer"> <!--PIÉ DE PÁGINA / LINKS REDES ETC-->
-        
+
         <section class="footer-logo">
             <picture class="footer-logo-picture">
                 <img src="icons/LOGO RECUMBRE HOTEL.png" alt="">
@@ -183,10 +184,14 @@
         </section>
 
         <section class="footer-redes">
-            <a href="https://www.facebook.com/recumbrehotel" class="footer-social-icon"><img src="icons/facebook-02_1.ico" alt="Facebook"></a>
-            <a href="https://www.instagram.com/recumbrehotel/" class="footer-social-icon"><img src="icons/instagram-03_1.ico" alt="Instagram"></a>
-            <a href="https://www.tiktok.com/@recumbrehotel" class="footer-social-icon"><img src="icons/tiktok-04_1.ico" alt="TikTok"></a>
-            <a href="https://bit.ly/Reser_" class="footer-social-icon"><img src="icons/whatsapp-05_1.ico" alt="Whatsapp"></a>
+            <a href="https://www.facebook.com/recumbrehotel" class="footer-social-icon"><img
+                    src="icons/facebook-02_1.ico" alt="Facebook"></a>
+            <a href="https://www.instagram.com/recumbrehotel/" class="footer-social-icon"><img
+                    src="icons/instagram-03_1.ico" alt="Instagram"></a>
+            <a href="https://www.tiktok.com/@recumbrehotel" class="footer-social-icon"><img src="icons/tiktok-04_1.ico"
+                    alt="TikTok"></a>
+            <a href="https://bit.ly/Reser_" class="footer-social-icon"><img src="icons/whatsapp-05_1.ico"
+                    alt="Whatsapp"></a>
         </section>
 
         <article class="footer-autor">
