--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -137,7 +137,7 @@
                         <img class="img-ofertas" src="../images/ofertas-testimonios-v1.png" alt="Foto del cliente">
                     </picture>
                     <h1>Florian Torres</h1>
-                    <p>Nobis voluptatem magni doloribus voluptate culpa dolor est neque.</p>
+                    <p>Un lugar acogedor y con ofertas increíbles. Perfecto para descansar y disfrutar de Ayacucho.</p>
                 </acticle>
 
             <section class="section-ofertas">
@@ -146,7 +146,7 @@
                         <img class="img-ofertas" src="../images/ofertas-testimonios-v2.png" alt="Foto del cliente">
                     </picture>
                     <h1>Susan Medrano</h1>
-                    <p>Nobis voluptatem magni doloribus voluptate culpa dolor est neque.</p>
+                    <p>Las ofertas del hotel hacen que la estadía sea aún mejor. ¡Muy recomendado!</p>
                 </acticle>
 
             <section class="section-ofertas">
@@ -155,7 +155,7 @@
                         <img class="img-ofertas" src="../images/ofertas-testimonios-v3.png" alt="Foto del cliente">
                     </picture>
                     <h1>Carla Quispe</h1>
-                    <p>Nobis voluptatem magni doloribus voluptate culpa dolor est neque.</p>
+                    <p>Recumbre Hotel siempre supera mis expectativas. Sus ofertas son lo mejor.</p>
                 </acticle>
             
         </main>
